[package]
name = "guzuta"
version = "0.4.1"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
description = "Custom repository manager for ArchLinux pacman"
homepage = "https://github.com/eagletmt/guzuta"
repository = "https://github.com/eagletmt/guzuta"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "1"
clap = "2"
env_logger = "0.9"
flate2 = "1"
futures = "0.3"
gpgme = "0.10"
log = "0.4"
aws-config = "0.2"
aws-sdk-s3 = "0.2"
rust-crypto = "0.2"
rust-lzma = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tar = "0.4"
tempdir = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
zstd = "0.9"
