[package]
name = "guzuta"
version = "0.4.1"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
description = "Custom repository manager for ArchLinux pacman"
homepage = "https://github.com/eagletmt/guzuta"
repository = "https://github.com/eagletmt/guzuta"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1"
aws-config = "0.54"
aws-sdk-s3 = "0.24"
base64 = "0.21"
bytes = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures = "0.3"
gpgme = "0.11"
md-5 = "0.10"
rust-lzma = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tempdir = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.12"
